--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content type" content="text/html; charset=utf8">
     <meta property ="og:video" content="sf.webm">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
     <h1>Сергей&nbsp;Фёдоров, ux·ui&nbsp;дизайнер</h1>
